blocks/header.css
.header {
  background-color: #fff;
  background-image: url("../images/background_header.svg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  max-height: 800px;
  min-height: 720px;
  height: 100vh;
  position: relative;
}

.header__content {
  min-height: 720px;
  max-height: 800px;
}

.header__title {
  max-width: 709px;
  margin-bottom: 28px;
  margin-left: 80px;
  margin-top: 128px;
  white-space: pre-line;
  line-height: 1.5;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 58px;
  line-height: 72px;
  letter-spacing: -1px;
}

.header__span-accent {
  font-family: "Noto Serif";
  font-style: italic;
  font-weight: normal;
  font-size: 58px;
  color: #2f80ed;
}

.header__description {
  max-width: 683px;
  position: absolute;
  left: 80px;
  font-family: "Noto Serif";
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
}

.header__image {
  width: 646px;
  height: 568px;
  position: absolute;
  right: 5px;
  top: 124px;
}

.header__footer {
  position: absolute;
  left: 80px;
  bottom: 40px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  color: #838383;
  line-height: 0;
  width: 94%;
}

.header__footer p:last-of-type {
  position: absolute;
  right: 80px;
  bottom: 0;
  color: #838383;
}

.header__paragraph {
  color: #6f6f6f;
}

